    ADDED: splitter option: Overwrite files without confirmation
    ADDED: action: Go to Other Panel's Directory - shortcut: CTRL+=

    CHANGED: krarc write support is disabled by default
    CHANGED: user action manager starts with the "Basic Properties" tab active
    CHANGED: detailed view: "Automatically Resize Columns" setting is remembered

    FIXED: mountman: mount list is not refreshed if /etc/mtab is a symlink to /proc/mounts
    FIXED: [ 148866 ] create new directory: spaces are stripped out
    FIXED: [ 305069 ] list panel is not autoscrolled to the cursor (in brief view)
    FIXED: [ 173690 ] file ACLs are not displayed correctly in properties dialog
           - thanks to Eugeny Shkrigunov
    FIXED: It is impossible to select a non-default folder in the search dialog
    FIXED: splitter overwrites files without confirmation
    FIXED: [ 274483 ] crash when selecting items from popup-menu
    FIXED: [ 285778 ] View or edit files doesn't work
    FIXED: viewer tries to load obsolete libkhexedit2 part as hex viewer -
           use okteta part instead
    FIXED: crash when trying to view files with embedded KOrganizer part
           (avoids KOrganizer bug 205713)
    FIXED: "apply settings to other tab" action doesn't apply icon size
    FIXED: [ 198996 ] crash when closing viewer
    FIXED: [ 294501 ] toolbar "equal" has no shortcut
    FIXED: [ 108892 ] "Combine Files" overwrites existing target file without confirmation
    FIXED: Queue manager closed when any of the queues finished
    FIXED: [ 300922 ] crash when pause sftp transfer via queue on quit
    FIXED: [ 271265 ] krusader should search for kdesu executable in /usr/lib{64,}/kde4/libexec/
           - thanks to Anssi Hannula / Ahmad Samir
    FIXED: [ 290304 ] Panel option "always sort dirs by name" doesn't work
    FIXED: [ 297926 ] state of the menu item 'Show hidden files' and the current setting is different
    FIXED: [ 234296 ] crash when closing disk usage view