@@ -8,6 +8,7 @@
     CHANGED: user action manager starts with the "Basic Properties" tab active
     CHANGED: detailed view: "Automatically Resize Columns" setting is remembered
 
+    FIXED: user actions: "run in the embedded terminal emulator" setting is not saved
     FIXED: mountman: mount list is not refreshed if /etc/mtab is a symlink to /proc/mounts
     FIXED: [ 148866 ] create new directory: spaces are stripped out
     FIXED: [ 305069 ] list panel is not autoscrolled to the cursor (in brief view)
